# xee-extract

./: Cargo.toml  LICENSE  README.md
examples/: 01_basic_extraction.rs  02_named_extractions.rs  03_custom_extract_value.rs  04_namespaces.rs  05_contexts.rs  06_nested_structs.rs  07_raw_xml.rs  08_binary_handling.rs  09_multi_document_extraction.rs  10_bound_variables.rs  README.md  basic_example.rs  combined_namespace_example.rs  default_namespace_example.rs  entry.xml  named_extracts_example.rs  namespace_context_example.rs  new_attributes_example.rs  pretty_errors_example.rs  simple_example.rs  simple_pretty_errors.rs  xml_attribute_example.rs
src/: error.rs  lib.rs
src/macros/: mod.rs
tests/: basic_extraction.rs  basic_tests.rs  binary_extraction.rs  complex_scenarios.rs  context.rs  defaults.rs  error_handling.rs  integration_examples.rs  integration_tests.rs  multi_doc_extraction.rs  named_extractions.rs  namespace_context_tests.rs  namespaces.rs  nested_structs.rs  new_attributes_tests.rs  optional_fields.rs  pretty_errors.rs  run_examples.rs  simple_defaults.rs  variable_binding.rs  variables.rs  vectors.rs  xml_attribute_tests.rs  xml_attributes.rs
xee-extract-macros/: Cargo.toml
xee-extract-macros/src/: attr.rs  lib.rs
